# llm-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  demo.tape  pyproject.toml  todo.txt
llm_cli/: app.py  constants.py  convert.py  main.py  utils.py
llm_cli/prompts/: prompt_general.txt
src/llm_cli/: app.py  chat_manager.py  cli.py  config.py  constants.py  convert.py  exceptions.py  llm_types.py  main.py  model_config.py  models.yaml  models_template.yaml  prompts.py  registry.py  renderers.py  response_handler.py  utils.py
src/llm_cli/config/: loaders.py  settings.py  user_config.py
src/llm_cli/core/: chat_factory.py  chat_manager.py  chat_repository.py  client.py  message_utils.py  session.py  smart_title.py
src/llm_cli/prompts/: prompt_concise.txt  prompt_general.txt
src/llm_cli/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  openai_provider.py  openrouter_provider.py  xai_provider.py
src/llm_cli/ui/: chat_selector.py  input_handler.py  labels.py
tests/: conftest.py  test_main.py
tests/fixtures/: test_models.yaml
tests/unit/: test_app.py  test_cli.py  test_registry.py
tests/unit/config/: test_loaders.py  test_model_config.py
tests/unit/core/: test_chat_factory.py  test_client.py  test_message_utils.py  test_session.py  test_smart_title.py
tests/unit/providers/: test_base.py
tests/unit/ui/: test_chat_selector.py  test_input_handler.py
