[project]
name = "llm-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Sclearov", email = "dansclearov@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.2",
    "colored>=2.3.0",
    "dotenv>=0.9.9",
    "openai>=1.84.0",
    "platformdirs>=4.3.8",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
]

[project.scripts]
llm-cli = "llm_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
